Fix PTT button alignment

--- a/src/room/PTTCallView.module.css
+++ b/src/room/PTTCallView.module.css
@@ -89,7 +89,7 @@
   }
 
   .pttButtonContainer {
-    flex: auto;
+    flex: 0;
     margin-bottom: 0;
     justify-content: flex-start;
   }
